--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@heroicons/react": "^2.1.3",
     "@mui/material": "^7.3.5",
     "@reduxjs/toolkit": "^2.10.1",
+    "firebase": "^12.6.0",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
